--- a/Swiftbook One/Base.lproj/Main.storyboard
+++ b/Swiftbook One/Base.lproj/Main.storyboard
@@ -17,15 +17,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xNb-Ce-Gwj">
-                                <rect key="frame" x="184" y="438" width="46" height="30"/>
+                                <rect key="frame" x="134" y="720" width="146" height="100"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="146" id="UUJ-RW-15N"/>
+                                    <constraint firstAttribute="height" constant="100" id="aHe-Dl-Dso"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xNb-Ce-Gwj" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="5lS-WZ-Nq0"/>
-                            <constraint firstItem="xNb-Ce-Gwj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WCO-GS-UKm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xNb-Ce-Gwj" secondAttribute="bottom" constant="42" id="3YS-E8-9E2"/>
+                            <constraint firstItem="xNb-Ce-Gwj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="f2J-Y7-feE"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,6 +42,9 @@
     <resources>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
